# py-serial-qt

./: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/my_module/: person.py
src/serial_comm_gui/: main.py  serial_gui.py
src/serial_gui/: __init__.py  main.py
src/serial_gui/core/: serial_handler.py
src/serial_gui/gui/: __init__.py  port_combo_box.py  serial_gui.py
tests/: test_person.py  test_serial_gui.py  test_serial_handler.py
